# seedsigner

./: .README.md.swp  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  ST7789.py  bcur.py  controller.py  dice.py  docker-compose.yml  flake.nix  getword24.py  getwords.py  iotest.py  lumensigner_pubkey.gpg  main.py  menus.py  psbtsign.py  pyproject.toml  requirements-emulator.txt  requirements-raspi.txt  requirements.txt  resources.py  seedsigner.py  seedsigner_pubkey.gpg  setup.cfg  setup.py  xpubmake.py
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  pre-commit.yaml  pre-commit.yml  telegram.yml  tests.yml
.nova/: Configuration.json
.nova/Tasks/: Custom Task.json
Orange_Pill/design_files/: OP_Upper.f3d  joystiick.f3d
Orange_Pill/print_files/: OP_Lower.stl  joystick.stl
docker/: Dockerfile  setup.sh
docs/: code_structure.md  debug_crash.md  developer_tips.md  dice_verification.md  electrum.md  emulator_setup.md  example-config.txt  feature_roadmap.md  legacy_hardware.md  manual_installation.md  official_image_installation.md  passphrase_considerations.md  prerelease_roadmap.md  qr_code_template.html  qr_code_template.py  qr_code_template_21x21.html  qr_code_template_25x25.html  qr_code_template_29x29.html  qr_formats.md  raspberry_pi_os_build_instructions.md  recovery.md  smartcard_support_installation.md  touchscreen_setup.md  usb_relay.md
docs/dice_words/: README.md  chisq.py
docs/seed_qr/: README.md
enclosures/lookScrews!_pill/: README.md  pressPad.stl
enclosures/look_screws_pill/: Bottom.stl  ButtonsConnected.stl  README.md  Top.stl
enclosures/open_pill/: open_pill_notes.md
enclosures/open_pill_mini/: Main_Chassis.stl  README.md  open_pill_mini_notes.md
enclosures/open_pill_mini_w_coverplate/: Buttons.stl  Lid.stl  Main_Chassis.stl  README.md  Thumbstick_PLA.stl  Thumbstick_TPU.stl
enclosures/orange_pill/: README.md
enclosures/orange_pill_mini/: OrangePillMini_Bottom.3mf  OrangePillMini_Buttons.stl  OrangePillMini_Top.stl  README.md  ThumbStick_small.stl  Trackball.stl
enclosures/pushcase/: README.md
enclosures/rugged_pill/: README.md  RuggedPillBottom_4SeedHammer.stl  RuggedPill_Bottom.stl  RuggedPill_Buttons.stl  RuggedPill_Thumbstick.stl  RuggedPill_Top.stl  RuggedPill_Trackball.stl
enclosures/simple_pill/: README.md  simple_pill_notes.md  sp_button.stl  sp_dpad.stl  sp_lower.stl  sp_upper.stl
helpers/: ST7789.py  bcur.py  buttons.py  camera_process.py  path.py  psbt_signer.py  qr.py
models/: blue_vault_wallet.py  generic_ur2_wallet.py  seed_storage.py  sparrow_multisig_wallet.py  specter_desktop_multisig_wallet.py  specter_desktop_single_sig_wallet.py  wallet.py
proto/: lumensigner.proto
seedsigner/: controller.py  main.py  settings.ini
seedsigner/bip39/: es.py
seedsigner/models/: seed_storage.py  specter_desktop_multisig_wallet.py  specter_desktop_single_sig_wallet.py
seedsigner/views/: io_test_view.py  menu_view.py  seed_tools_view.py  settings_tools_view.py  signing_tools_view.py  view.py
src/: default_settings.ini  main.py  settings.ini
src/lumensigner/: __init__.py  cli.py  controller.py
src/seedsigner/: camera.py  (+2 more)
tests/: README.md  base.py  requirements.txt  test_bip85.py  test_controller.py  test_decodepsbtqr.py  test_decoder.py  test_embit_utils.py  test_encodepsbtqr.py  test_encoder.py  test_flows.py  test_flows_psbt.py  test_flows_seed.py  test_flows_settings.py  test_flows_tools.py  test_flows_view.py  test_main.py  test_mnemonic_generation.py  test_psbt_parser.py  test_seed.py  test_seedqr.py  test_settings.py  test_settingsqr_decoder.py  test_threads.py  utils.py
tools/: javacard-build.xml.manual  javacard-build.xml.seedsigneros  mnemonic.py  request_address.py  seed_phrase_to_qr.py  sign_hash.py  sign_transaction.py
views/: menu_view.py  seed_tools_view.py  settings_tools_view.py  signing_tools_view.py  view.py
(+176 files in other folders)
